# quirktracker

./: .gitignore  4vector_500GeV_PID15_1jet.csv  background.py  background_multiprocessing.py  checkoutput.py  knappen.py  main.py  quirk.py  quirk_multiprocessing.py
HitFiles/: QuirkMass_500_Lambda_20.csv  QuirkMass_500_Lambda_500.csv
HitFiles/test/: thing.csv
python_tracker/: 4vector_500GeV_PID-15_1jet.csv  background.py  checkoutput.py  knappen.py  quirk.py  requirements.txt
python_tracker/HitFiles/: QuirkMass_500_Lambda_20.csv
rust_tracker/: 4vector_500GeV_PID-15_1jet.csv  4vector_500GeV_PID15_1jet.csv  Cargo.toml
rust_tracker/HitFiles/: QuirkMass_500_Lambda_20.csv
rust_tracker/ode-solvers/src/: dop853.rs  rk4.rs
rust_tracker/src/: background.rs  knappen.rs  main.rs  quirk.rs
