[package]
name = "rust_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
rayon = "^0"
clap = "^3.0"
ode_solvers = { path = "./ode-solvers" }
roots = "*"
num-traits = "*"
simba = "*"
csv = "*"
serde = { version = "*", features = ["derive"] }
plotters = "0.3.5"